cambios base del repo

--- a/reportuach.cls
+++ b/reportuach.cls
@@ -1,3 +1,21 @@
+% ============================================================
+%
+% Plantilla para reportes
+%
+% Author: Enrique Ramirez
+%
+% ============================================================
+\NeedsTeXFormat{LaTeX2e}
+\ProvidesClass{settings/uach}
+
+\RequirePackage{kvoptions}[2010/12/23]%Este paquete está destinado a los autores de paquetes que desean utilizar opciones en formato de valor clave para sus opciones de paquete.
+% Conditional commands
+\RequirePackage{ifthen}%paquetes con commandos condicionales
+%\ifthenelse{test}{then}{else}
+\SetupKeyvalOptions{
+	family=uach,
+	prefix=uach@
+}
 % Set English as default language
 \DeclareStringOption[]{language}[english]
 
@@ -16,3 +34,52 @@
 
 % Option in case of multiple authors
 \DeclareBoolOption{multiauthor}
+
+% Process options
+\ProcessKeyvalOptions*
+
+
+
+
+
+\LoadClass[a4paper,12pt]{report}
+
+% \RequirePackage[a4paper,left=2.9cm, top=2.9cm, bottom=2.3cm, right=2.9cm,includefoot,heightrounded]{geometry}
+%margenes segun reglamentos
+\usepackage[papersize={216mm,279mm},tmargin=30mm,bmargin=25mm,lmargin=30mm,rmargin=20mm, heightrounded=true]{geometry}
+\setlength{\headheight}{52pt}
+
+% Customize the table of contents
+\usepackage[titles]{tocloft}
+
+% General language and symbol settings
+\RequirePackage[T1]{fontenc}
+
+% generacion de acronimos
+\usepackage{acronym}
+
+% Images & Drawing
+\RequirePackage{graphicx}
+\RequirePackage{xcolor}
+\RequirePackage{tikz}
+
+% Math and Symbols
+\RequirePackage{amsmath}
+\RequirePackage{amssymb}
+\RequirePackage{eurosym}
+
+% Insercion de codigo
+\RequirePackage{algorithm}
+\RequirePackage[noend]{algpseudocode}
+\RequirePackage{algorithmicx}
+\RequirePackage{minted}
+\usemintedstyle{borland}
+\newcounter{lstlisting}
+%\usepackage{listings}
+
+% Break URLs at hyphen and url
+\RequirePackage[hyphens]{url}
+\RequirePackage{hyperref}
+
+%table
+\RequirePackage{longtable}
