--- a/reportuach.cls
+++ b/reportuach.cls
@@ -3,83 +3,97 @@
 % Plantilla para reportes
 %
 % Author: Enrique Ramirez
+% Modified to include institute support
 %
 % ============================================================
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesClass{reportuach}
+\RequirePackage{kvoptions}[2010/12/23]
+\RequirePackage{ifthen}
 
-\RequirePackage{kvoptions}[2010/12/23]%Este paquete está destinado a los autores de paquetes que desean utilizar opciones en formato de valor clave para sus opciones de paquete.
-% Conditional commands
-\RequirePackage{ifthen}%paquetes con commandos condicionales
-%\ifthenelse{test}{then}{else}
 \SetupKeyvalOptions{
 	family=reportuach,
 	prefix=reportuach@
 }
-% Set English as default language
+
+% Existing options
 \DeclareStringOption[]{language}[english]
-
-% Set Master Thesis as default document type
 \DeclareStringOption[]{thesis}[master]
-
-% Set supervisor ≠ professor as default supervisor option
 \DeclareStringOption[]{supervisor}[supervisor]
-
-% Set statistic as the default chair
 \DeclareStringOption[]{chair}[statistics]
-
-% Option to control licensing
-%% License information functionality ported from dbisgroup/dbis-template;
 \DeclareStringOption{license}
-
-% Option in case of multiple authors
 \DeclareBoolOption{multiauthor}
 
-% Process options
+% New option for institute
+\DeclareStringOption[]{institute}[]
+
 \ProcessKeyvalOptions*
-
-
-
-
-
 \LoadClass[a4paper,12pt]{report}
 
-% \RequirePackage[a4paper,left=2.9cm, top=2.9cm, bottom=2.3cm, right=2.9cm,includefoot,heightrounded]{geometry}
-%margenes segun reglamentos
+% Existing packages and settings...
 \usepackage[papersize={216mm,279mm},tmargin=30mm,bmargin=25mm,lmargin=30mm,rmargin=20mm, heightrounded=true]{geometry}
 \setlength{\headheight}{52pt}
-
-% Customize the table of contents
 \usepackage[titles]{tocloft}
-
-% General language and symbol settings
 \RequirePackage[T1]{fontenc}
-
-% generacion de acronimos
 \usepackage{acronym}
-
-% Images & Drawing
 \RequirePackage{graphicx}
 \RequirePackage{xcolor}
 \RequirePackage{tikz}
-
-% Math and Symbols
 \RequirePackage{amsmath}
 \RequirePackage{amssymb}
 \RequirePackage{eurosym}
-
-% Insercion de codigo
 \RequirePackage{algorithm}
 \RequirePackage[noend]{algpseudocode}
 \RequirePackage{algorithmicx}
 \RequirePackage{minted}
 \usemintedstyle{borland}
 \newcounter{lstlisting}
-%\usepackage{listings}
-
-% Break URLs at hyphen and url
 \RequirePackage[hyphens]{url}
 \RequirePackage{hyperref}
-
-%table
 \RequirePackage{longtable}
+
+% New commands for institute
+\newcommand{\@institute}{}
+\newcommand{\institute}[1]{\def\@institute{#1}}
+
+% Redefine \maketitle to include institute
+\renewcommand{\maketitle}{%
+  \begin{titlepage}%
+    \let\footnotesize\small
+    \let\footnoterule\relax
+    \let \footnote \thanks
+    \null\vfil
+    \vskip 60\p@
+    \begin{center}%
+      {\LARGE \@title \par}%
+      \vskip 3em%
+      {\large
+       \lineskip .75em%
+        \begin{tabular}[t]{c}%
+          \@author
+        \end{tabular}\par}%
+      \vskip 1.5em%
+      {\large \@institute \par}%
+      \vskip 1.5em%
+      {\large \@date \par}%
+    \end{center}\par
+    \@thanks
+    \vfil\null
+  \end{titlepage}%
+  \setcounter{footnote}{0}%
+  \global\let\thanks\relax
+  \global\let\maketitle\relax
+  \global\let\@thanks\@empty
+  \global\let\@author\@empty
+  \global\let\@date\@empty
+  \global\let\@title\@empty
+  \global\let\@institute\@empty
+  \global\let\title\relax
+  \global\let\author\relax
+  \global\let\date\relax
+  \global\let\and\relax
+  \global\let\institute\relax
+}
+
+% Rest of the class file...
+
