--- a/summary-report-style.sty
+++ b/summary-report-style.sty
@@ -1,23 +1,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% summary-report-style.sty
+% summary-report-style.sty - IMPROVED VERSION
 %
 % Complementary style package for summary-report class
-% Provides advanced styling, color schemes, and custom environments
 %
-% Features:
-%   - Corporate color palettes
-%   - Custom highlight boxes
-%   - Progress indicators
-%   - Status badges
-%   - Statistics boxes
-%   - Timeline environments
-%
-% Version: 1.0
+% Version: 1.1 IMPROVED WITH TABLE SCALING
 % Date: 2024
+%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{summary-report-style}[2024/01/01 v1.0 Summary Report Style Package]
+\ProvidesPackage{summary-report-style}[2024/01/01 v1.1 Summary Report Style Package]
 
 %---------------------------------------------------------------
 % DEPENDENCIES
@@ -27,24 +19,20 @@
 \RequirePackage{tikz}
 \RequirePackage{pgfplots}
 \RequirePackage{calc}
-\RequirePackage{fontawesome5}
 
 %---------------------------------------------------------------
 % ENHANCED COLOR PALETTE
 %---------------------------------------------------------------
-% Primary colors
 \definecolor{primaryColor}{cmyk}{0.4,0.1,0,0.4}
 \definecolor{primaryLight}{cmyk}{0.15,0.05,0,0.1}
 \definecolor{primaryDark}{cmyk}{0.6,0.2,0.1,0.6}
 
-% Accent colors
 \definecolor{accentGreen}{RGB}{76,175,80}
 \definecolor{accentOrange}{RGB}{255,152,0}
 \definecolor{accentRed}{RGB}{244,67,54}
 \definecolor{accentBlue}{RGB}{33,150,243}
 \definecolor{accentPurple}{RGB}{156,39,176}
 
-% Neutral colors
 \definecolor{darkText}{RGB}{33,33,33}
 \definecolor{mediumText}{RGB}{117,117,117}
 \definecolor{lightText}{RGB}{189,189,189}
@@ -52,36 +40,55 @@
 \definecolor{mediumGray}{RGB}{224,224,224}
 \definecolor{darkGray}{RGB}{66,66,66}
 
-% Status colors
 \definecolor{statusSuccess}{RGB}{76,175,80}
 \definecolor{statusWarning}{RGB}{255,193,7}
 \definecolor{statusDanger}{RGB}{244,67,54}
 \definecolor{statusInfo}{RGB}{33,150,243}
 
 %---------------------------------------------------------------
+% TABLE SCALING FOR TWO-COLUMN LAYOUT
+%---------------------------------------------------------------
+
+% Ambiente para tablas con tamaño automático adaptado al ancho de columna
+\newenvironment{scaledtable}[1][1.0]{
+  \fontsize{8pt}{10pt}\selectfont
+  \renewcommand{\arraystretch}{1.2}
+  \scalebox{#1}{
+    \begin{tabular}
+}{
+    \end{tabular}
+  }
+}
+
+% Comando para tablas pequeñas que caben en una columna
+\newcommand{\compactTable}[1]{
+  \vspace{0.1cm}
+  \fontsize{7pt}{9pt}\selectfont
+  #1
+  \vspace{0.1cm}
+}
+
+%---------------------------------------------------------------
 % HIGHLIGHT BOX ENVIRONMENTS
 %---------------------------------------------------------------
 
-% Key Finding Box
 \newcommand{\keyfindings}[1]{
   \vspace{0.2cm}
   \begin{tcolorbox}[
-    colback=primaryLight!40,
+    colback=primaryColor!20,
     colframe=primaryColor,
     arc=4pt,
     boxrule=1.5pt,
     left=0.5cm,
     right=0.5cm,
     top=0.4cm,
-    bottom=0.4cm,
-    fontupper=\fontsize{9pt}{11pt}\selectfont
+    bottom=0.4cm
   ]
     \textbf{\color{primaryColor}Key Finding:} #1
   \end{tcolorbox}
   \vspace{0.2cm}
 }
 
-% Important Note Box
 \newcommand{\importantnote}[1]{
   \vspace{0.2cm}
   \begin{tcolorbox}[
@@ -92,15 +99,13 @@
     left=0.5cm,
     right=0.5cm,
     top=0.3cm,
-    bottom=0.3cm,
-    fontupper=\fontsize{8pt}{10pt}\selectfont
+    bottom=0.3cm
   ]
-    {\small\textbf{⚠ Note:}} #1
+    {\small\textbf{Note:}} #1
   \end{tcolorbox}
   \vspace{0.2cm}
 }
 
-% Success/Completed Box
 \newcommand{\successbox}[1]{
   \vspace{0.2cm}
   \begin{tcolorbox}[
@@ -111,15 +116,13 @@
     left=0.5cm,
     right=0.5cm,
     top=0.3cm,
-    bottom=0.3cm,
-    fontupper=\fontsize{8pt}{10pt}\selectfont
+    bottom=0.3cm
   ]
-    {\small✓ Success:} #1
+    {\small Success:} #1
   \end{tcolorbox}
   \vspace{0.2cm}
 }
 
-% Alert/Danger Box
 \newcommand{\alertbox}[1]{
   \vspace{0.2cm}
   \begin{tcolorbox}[
@@ -130,15 +133,13 @@
     left=0.5cm,
     right=0.5cm,
     top=0.3cm,
-    bottom=0.3cm,
-    fontupper=\fontsize{8pt}{10pt}\selectfont
+    bottom=0.3cm
   ]
-    {\small\textbf{✕ Alert:}} #1
+    {\small\textbf{Alert:}} #1
   \end{tcolorbox}
   \vspace{0.2cm}
 }
 
-% Information Box
 \newcommand{\infobox}[1]{
   \vspace{0.2cm}
   \begin{tcolorbox}[
@@ -149,10 +150,9 @@
     left=0.5cm,
     right=0.5cm,
     top=0.3cm,
-    bottom=0.3cm,
-    fontupper=\fontsize{8pt}{10pt}\selectfont
+    bottom=0.3cm
   ]
-    {\small\textbf{ℹ Info:}} #1
+    {\small\textbf{Info:}} #1
   \end{tcolorbox}
   \vspace{0.2cm}
 }
@@ -164,8 +164,7 @@
 \newcommand{\statusbadge}[2]{
   \tikz[baseline=(badge.base)]{
     \node[
-      rounded rectangle,
-      rounded rectangle arc length=180,
+      circle,
       fill=#1,
       text=white,
       inner sep=0.3cm,
@@ -205,16 +204,13 @@
 %---------------------------------------------------------------
 
 \newcommand{\progressbar}[3]{
-  % #1: percentage (0-100)
-  % #2: label
-  % #3: optional color (default primaryColor)
   \vspace{0.15cm}
   \noindent
   \textbf{\fontsize{8pt}{10pt}\selectfont #2}\\
-  \tikz{
+  \tikz[baseline]{
     \draw[lightGray, line width=0.3cm] (0,0) -- (3,0);
     \draw[#3, line width=0.3cm] (0,0) -- ({3*#1/100},0);
-    \node[right, fontsize=8pt, inner sep=2pt] at (3.1,0) {\textbf{#1\%}};
+    \node[right, inner sep=2pt] at (3.1,0) {\textbf{#1\%}};
   }
   \vspace{0.1cm}
 }
@@ -242,18 +238,15 @@
 }
 
 \newcommand{\milestone}[3]{
-  % #1: date
-  % #2: title
-  % #3: status (completed/in-progress/planned)
   \vspace{0.1cm}
   \noindent
   \textbf{\small #1} \hfill
   \ifx#3completed
-    \statusgreen{✓ Completed}
+    \statusgreen{Completed}
   \else\ifx#3in-progress
-    \statusblue{⟳ In Progress}
+    \statusblue{In Progress}
   \else
-    \statusyellow{○ Planned}
+    \statusyellow{Planned}
   \fi\fi\\
   \fontsize{8pt}{10pt}\selectfont #2\\
 }
@@ -263,10 +256,6 @@
 %---------------------------------------------------------------
 
 \newcommand{\metricpair}[4]{
-  % #1: metric name
-  % #2: metric value
-  % #3: trend (↑ or ↓ or →)
-  % #4: change percentage
   \begin{minipage}[c]{0.48\linewidth}
     \begin{tcolorbox}[
       colback=lightGray!50,
@@ -293,7 +282,7 @@
 \newcommand{\displaymetrics}[4]{
   \vspace{0.2cm}
   \noindent
-  \metricpair{#1}{#2}{↑}{+#3}\hfill
+  \metricpair{#1}{#2}{$\uparrow$}{+#3}\hfill
   \metricpair{}{}{}{#4}
   \vspace{0.2cm}
 }
@@ -305,7 +294,7 @@
 \newenvironment{projectsummary}[1]{
   \vspace{0.3cm}
   \begin{tcolorbox}[
-    colback=primaryLight!20,
+    colback=primaryColor!20,
     colframe=primaryColor,
     arc=4pt,
     boxrule=2pt,
@@ -314,8 +303,7 @@
     top=0.4cm,
     bottom=0.4cm,
     title={#1},
-    titlerule=true,
-    timetitle=\bfseries\color{primaryColor}\fontsize{10pt}{12pt}\selectfont
+    titlerule=true
   ]
     \fontsize{8pt}{10pt}\selectfont
 }{
@@ -332,13 +320,13 @@
 }
 
 %---------------------------------------------------------------
-% BULLET POINT STYLES
+% BULLET POINT STYLES WITH PROPER SYMBOLS
 %---------------------------------------------------------------
 
-\newcommand{\checkmark}{\color{statusSuccess}{\textbf{✓}}\color{darkText} }
-\newcommand{\xmark}{\color{statusDanger}{\textbf{✕}}\color{darkText} }
-\newcommand{\pending}{\color{statusWarning}{\textbf{◐}}\color{darkText} }
-\newcommand{\arrow}{\color{primaryColor}{\textbf{→}}\color{darkText} }
+\newcommand{\checkmarkicon}{{\color{statusSuccess}\checkmark}}
+\newcommand{\xmark}{{\color{statusDanger}$\times$}}
+\newcommand{\pending}{{\color{statusWarning}$\circ$}}
+\newcommand{\arrow}{{\color{primaryColor}$\rightarrow$}}
 
 %---------------------------------------------------------------
 % CUSTOM LISTS WITH ICONS
@@ -346,7 +334,7 @@
 
 \newenvironment{checklist}{
   \begin{enumerate}[
-    label={\checkmark},
+    label={\checkmarkicon},
     left=0pt,
     labelsep=0.3cm
   ]
@@ -420,20 +408,16 @@
 }
 
 %---------------------------------------------------------------
-% DECLARETHEOREMSTYLE WITH VISUAL ENHANCEMENT
+% THEOREM STYLING
 %---------------------------------------------------------------
 
 \tcbset{
-  theorem style=standard,
-  theorem name=Theorem,
-  theorem number in name,
   colback=lightGray!50,
   colframe=primaryColor,
-  fonttitle=\bfseries\color{primaryColor},
-  top=0.3cm,
-  bottom=0.3cm,
   left=0.4cm,
-  right=0.4cm
+  right=0.4cm,
+  top=0.3cm,
+  bottom=0.3cm
 }
 
 \endinput
